--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
-BOT_TOKEN = environ.get('BOT_TOKEN')
-API_HASH = environ.get('API_HASH')
-API_ID = int(environ.get('API_ID'))
+ bot_token= "7134476511:AAHJu8rc9LxoRu6A_oJHV70WEAgG1fYCWOQ")
+ api_id=23455230,)
+ api_hash= "1740e4541ec18b9cdd3e5ff6f3687d46")
