--- a/app.json
+++ b/app.json
@@ -31,7 +31,7 @@
 
         "BOT_TOKEN": {
 
-      "value":"6557888895:AfyujbAr677uhgrr67gcz",
+      "value":"7109764791:AAGQcpywUqlt2M77acmsSu31N8RxY-KXU1c",
 
             "description": "Your Bot token from @Botfather"
 
@@ -39,7 +39,7 @@
 
         "API_ID": {
 
-      "value":"29410389",
+      "value":"20047839",
 
             "description": "Your API_ID from https://my.telegram.org/apps"
 
@@ -47,7 +47,7 @@
 
         "API_HASH": {
 
-      "value":"0c716764715886f6641477ffbb63e1ee",
+      "value":"e635f85a4dae812a26c450c0d41276b0",
 
             "description": "Your API_HASH from https://my.telegram.org/apps"
 
